feat(gemini): Improve API key handling and TS config
Enhance the Gemini service's API key retrieval by adding safer access to environment variables and improving error logging. Also, update the tsconfig to include Vite environment declaration files for better type checking.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["vite/client"]
   },
-  "include": ["**/*"],
+  "include": ["**/*", "vite-env.d.ts"],
   "exclude": ["node_modules"]
 }
